--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "^8.5.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-0": "^6.24.1",
     "browser-sync": "^2.23.6",
@@ -69,12 +70,17 @@
     "not ie <= 8"
   ],
   "dependencies": {
+    "axios": "^0.18.0",
     "jquery": "^3.3.1",
     "normalize.css": "^7.0.0",
+    "npm": "^6.1.0",
     "promptly": "^3.0.3",
     "pug": "^2.0.3",
     "request": "^2.87.0",
     "signale": "^1.1.0",
-    "vue": "2.5.13"
+    "vue": "2.5.13",
+    "vue-axios": "^2.1.2",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   }
 }
